--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,48 +14,43 @@ authors = [
 requires-python = ">=3.11,<3.12"
 dependencies = [
     # Core scientific computing - pin to working versions
-    "numpy==2.1.*",
+    "numpy",
     "pandas>=2.0,<3.0",
     "matplotlib>=3.7,<4.0",
     "scipy>=1.11,<2.0",
     "statsmodels>=0.14,<1.0",
     "scikit-learn>=1.3,<2.0",
-    
     # LangChain
     "langchain>=0.1,<1.0",
     "langgraph==0.3.18",
     "langchain-openai>=0.1,<1.0",
     "langchain-anthropic>=0.1,<1.0",
-    "langchain-community>=0.0.20,<1.0",  
+    "langchain-community>=0.0.20,<1.0",
     "langchain-google-genai>=1.0,<3.0",
     "langchain-ollama>=0.1,<1.0",
-    
     # AI/ML
     "gradio",
     "openai>=1.0,<2.0",
     "transformers>=4.30,<5.0",
     "sentencepiece>=0.1.99,<1.0",
-    
     # Strands agents
     "strands-agents>=1.0",
     "strands-agents-tools>=0.2",
-    
     # Web and data processing
     "beautifulsoup4>=4.11,<5.0",
     "lxml>=4.9,<5.0",
     "requests>=2.28,<3.0",
     "pyyaml>=6.0,<7.0",
     "tqdm>=4.64,<5.0",
-    
     # Visualization and analysis
     "seaborn>=0.12,<1.0",
     "networkx>=3.0,<4.0",
-    
     # Development tools
     "jupyter>=1.0,<2.0",
     "notebook>=6.5,<8.0",
     "ipykernel>=6.20,<7.0",
     "pytest>=7.0,<8.0",
+    "langchain-aws>=0.2.28",
 ]
 
 
